# binary

./: .gitignore  .hgignore  .travis.yml  LICENSE  README  README.md  TODO  bbs.cabal  binary.cabal  changelog.md  docker-compose.yml  index.html
.github/workflows/: haskell-ci.yaml  haskell-ci.yml
benchmarks/: Benchmark.hs  Builder.hs  GenericsBench.hs  GenericsBenchCache.hs  GenericsBenchTypes.hs  Get.hs  Makefile  Put.hs
cbits/: unaligned_read.c  unaligned_read.h
docker/: Dockerfile.anyghc  Dockerfile.ghc843
docs/hcar/: binary-Lb.tex
src/Data/: Binary.hs
src/Data/Binary/: Builder.hs  Class.hs  DecM.hs  EncM.hs  FloatCast.hs  Generic.hs  Get.hs  GetM.hs  Internal.hs  Put.hs  PutM.hs
src/Data/Binary/Builder/: Base.hs  Common.hs  Internal.hs
src/Data/Binary/Get/: Internal.hs
src/Data/ByteString/: Binary.hs
src/Data/ByteString/Binary/: Class.hs  DecM.hs  EncM.hs
tests/: Action.hs  Arbitrary.hs  Benchmark.hs  CBenchmark.c  CBenchmark.h  File.hs  Generic.hs  Makefile  MemBench.hs  NewBenchmark.hs  QC.hs  QuickCheckUtils.hs
tools/derive/: BinaryDerive.hs  Example.hs
