Name:            BinaryByteString
Version:         0.1
License:         BSD3
Author:          Lennart Kolmodin <kolmodin@dtek.chalmers.se>
Synopsis:        Binary serialization using ByteStrings
Build-Depends:   base, mtl
                 , fps
hs-source-dirs:  src/
Exposed-Modules: Data.ByteString.Binary,
                 Data.ByteString.Binary.DecM,
                 Data.ByteString.Binary.EncM
Extensions:      CPP, ForeignFunctionInterface, FlexibleInstances
