name:            binary
version:         0.4
license:         BSD3
license-file:    LICENSE
author:          Lennart Kolmodin <kolmodin@dtek.chalmers.se>
maintainer:      Lennart Kolmodin, Don Stewart <dons@galois.com>
homepage:        http://www.cse.unsw.edu.au/~dons/binary.html
description:     Efficient, pure binary serialisation using lazy ByteStrings.
                 Haskell values may be encoded to and form binary formats, 
                 written to disk as binary, or sent over the network.
                 Serialisation speeds of over 1 G\/sec have been observed,
                 so this library should be suitable for high performance
                 scenarios.
synopsis:        Binary serialization for Haskell values using lazy ByteStrings
category:        Data, Parsing
build-depends:   base, containers, array, bytestring>=0.9
stability:       provisional
tested-with:     GHC==6.8
-- ghc 6.4 also needs package fps
exposed-modules: Data.Binary,
                 Data.Binary.Put,
                 Data.Binary.Get,
                 Data.Binary.Builder
extensions:      CPP,FlexibleContexts
hs-source-dirs:  src
ghc-options:     -O2 -Wall -fliberate-case-threshold=1000
extra-source-files: README 
